# opengm_crypto

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  traits.rs
src/blockmode/: cbc.rs  gcm.rs  mod.rs
src/blockmode/gcm/: ghash.rs  ghash_aarch64.rs  ghash_aarch64_noreflect.rs  ghash_amd64.rs  ghash_amd64_noreflect.rs  ghash_generic.rs
src/cms/: mod.rs  sm2.rs
src/cryptobyte/: asn1.rs  builder.rs  errors.rs  mod.rs  oid.rs  parser.rs
src/cryptobyte/asn1/: bit_string.rs  integer.rs  object_identifier.rs  raw.rs  time.rs
src/internal/: cpuid.rs  mod.rs
src/internal/cpuid/: aarch64.rs  x86_64.rs
src/mac/: hmac.rs  mod.rs
src/rand/: const_rng.rs  mod.rs
src/sm2/: encrypt.rs  error.rs  key_exchange.rs  mod.rs  sign.rs
src/sm2/ec/: arith.rs  curve.rs  gfn.rs  gfp.rs  mod.rs  primitive.rs
src/sm2/ec/arith/: arith_aarch64.rs
src/sm2/ec/curve/: table.rs
src/sm2/ec/gfp/: gfp_aarch64.rs
src/sm2/ec/primitive/: aarch64.rs  amd64.rs
src/sm3/: aarch64.rs  amd64.rs  generic.rs  mod.rs  test_data.rs  util.rs
src/sm3/aarch64/: aarch64_neon.rs
src/sm3/amd64/: amd64_avx2.rs  amd64_avx512.rs  amd64_sse2.rs
src/sm3_simd/: aarch64.rs  amd64.rs  digest.rs  mod.rs
src/sm3_simd/amd64/: avx2.rs  avx512.rs  sse2.rs
src/sm4/: mod.rs
src/sm4/block/: byteorder.rs  generic.rs  mod.rs  tables.rs  tables.txt
src/sm4/block/aarch64/: mod.rs
src/sm4/block/amd64/: block_aesni.rs  block_avx2.rs  block_avx512.rs  block_gfni.rs  block_vaes.rs  mem.rs  mod.rs
src/x/: mod.rs
